; ModuleID = '/home/carl/AnghaBench/sway/swaybar/extr_bar.c_xdg_output_handle_name.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/extr_bar.c_xdg_output_handle_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zxdg_output_v1 = type { i32 }
%struct.swaybar_output = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.zxdg_output_v1*, i8*)* @xdg_output_handle_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xdg_output_handle_name(i8* %0, %struct.zxdg_output_v1* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.zxdg_output_v1*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.swaybar_output*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.zxdg_output_v1* %1, %struct.zxdg_output_v1** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.swaybar_output*
  store %struct.swaybar_output* %9, %struct.swaybar_output** %7, align 8
  %10 = load %struct.swaybar_output*, %struct.swaybar_output** %7, align 8
  %11 = getelementptr inbounds %struct.swaybar_output, %struct.swaybar_output* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @free(i32 %12)
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @strdup(i8* %14)
  %16 = load %struct.swaybar_output*, %struct.swaybar_output** %7, align 8
  %17 = getelementptr inbounds %struct.swaybar_output, %struct.swaybar_output* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
